tests/int/snapshots/r#mod__int__use_command__module_visitor_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - visitor
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
expansion::{expand_path_to_string, expand_use_tree, extract_public_items, is_internal_path, is_internal_use, is_test_module}
formatter::{expand_use_tree_to_paths, strip_crate_prefix, truncate_path, use_tree_to_string}
resolver::resolve_module_path_to_file

----- stderr -----
